bluescreen: fixed overlapping of adjacent links [Closes #449]

--- a/src/Tracy/BlueScreen/assets/bluescreen.css
+++ b/src/Tracy/BlueScreen/assets/bluescreen.css
@@ -21,6 +21,10 @@
 	margin: -2px -4px;
 }
 
+#tracy-bs a + a {
+	margin-left: 0;
+}
+
 #tracy-bs a:hover,
 #tracy-bs a:focus {
 	color: #085AA3;
